--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,9 @@
       <h1>contact <span>us</span></h1>
       <p>please fill out the form below to contact us for any questions you have about books </p>
 
+      
+  
+
       <label for="name">name:</label><br>
       <input type="text" id="name" name="name"><br>
 
@@ -45,9 +48,13 @@
       <label for="message">message</label><br>
       <textarea name="message" id="message" cols="30" rows="10"></textarea>
 
+
+
      <br> 
+     <div class="button-phone">
      <input type="button" value="submit" id="submit">
 
+    </div>
 
 
     </div>
