--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
   </title>
   <style>
 
+/* @media only screen and (min-device-width: 375px) and (max-device-width: 667px) { */
+
 
   </style>
 
@@ -27,9 +29,12 @@
     </ul>
   </nav>
 
+
+
  <div class="head"> 
    <h1>about <span>twice sold stories</span></h1>
-  
+   <div class="wrapper">
+     
 
 <div class="container" id="about">
 
@@ -39,18 +44,35 @@
     <img src="/img/store.jpg" alt="">
   </div>
 
-
 </div>
+
+</div><!-- wrap end -->
 
 <div class="container" id="content">
   <h3>about our team</h3>
   <div class="container" id="woman">
+
+    <div id="womanbox" class="wrapper">
     <img src="/img/woman.jpg" alt="">
+
+  
+
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptas animi ad sequi quam. Harum amet assumenda dolorem aspernatur mollitia. Voluptatem, deleniti doloribus ullam at quos illo, quia laudantium voluptatum fuga excepturi minus impedit cumque sed neque alias perferendis harum, necessitatibus qui cupiditate quam voluptates nihil odit reprehenderit ipsam! Dolorem.</p>
   </div>
+</div> 
+
+
   <div class="container" id="women">
+
+      <div id="womenbox" class="wrapper">
+
     <img src="/img/woman2.jpeg" alt="">
+
+            
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptas animi ad sequi quam. Harum amet assumenda dolorem aspernatur mollitia. Voluptatem, deleniti doloribus ullam at quos illo, quia laudantium voluptatum fuga excepturi minus impedit cumque sed neque alias perferendis harum, necessitatibus qui cupiditate quam voluptates nihil odit reprehenderit ipsam! Dolorem.</p>
+
+  </div> 
+
   </div>
 </div>
 
